--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Kebrone</title>
 </head>
 <body>
-    <h1>It's Flithy Frank Mother Fucker. It's Flithy Frank Bitch.</h1>
+    <h1>Welcome to my journey!!!</h1>
 </body>
 </html>
