--- a/about.html
+++ b/about.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kebrone</title>
+    <title>About Us</title>
 </head>
 <body>
-
+    
     <a href="index.html">HOME</a> |
-    <a href="about.html" target="_blank" rel="noopener noreferrer">ABOUT US</a>
-    <h1>Welcome to my journey!!!</h1>
-    <br>
-    <a href="A1/index.html" target="_blank" rel="noopener noreferrer">A1 Home Page</a>
+    <a href="about.html" target="_blank" rel="noopener noreferrer">ABOUT US</a><br>
+    <h1>This is about us page</h1>
 </body>
 </html>
