--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <h1>Welcome to my journey!!!</h1>
     <br>
     <a href="A1/index.html" target="_blank" rel="noopener noreferrer">A1 Home Page</a>
+    <a href="HTML/index.html" target="_blank" rel="noopener noreferrer">HTML Home Page</a>
 </body>
 </html>         
