--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <a href="about.html" target="_blank" rel="noopener noreferrer">ABOUT US</a>
     <h1>Welcome to my journey!!!</h1>
     <br>
-    <a href="A1/index.html" target="_blank" rel="noopener noreferrer">A1 Home Page</a>
+    <a href="A1/index.html" target="_blank" rel="noopener noreferrer">A1 Home Page</a>||
     <a href="HTML/index.html" target="_blank" rel="noopener noreferrer">HTML Home Page</a>
 </body>
 </html>         
