--- a/JavaScript/intro.html
+++ b/JavaScript/intro.html
@@ -66,6 +66,21 @@
 
        let i=null;
        console.log(i);
+
+       //Data Type
+        //String Data Type
+        let name="Hein Min Htet"
+        console.log(name);
+        console.log(typeof(name));
+
+        let job = 'Web Developer';
+        console.log(job);
+        console.log(typeof(job));
+
+        let partTime_job = `Trainer`;
+        console.log(partTime_job);
+        console.log(typeof(partTime_job));
+        
         </script>
 </body>
 </html>
