--- a/JavaScript/is3.html
+++ b/JavaScript/is3.html
@@ -91,6 +91,45 @@
         let total = 1 * 2 + 5 / 2 % 2;
         console.log(total);
 
+        //Comparisons operator
+
+        let n = 12;
+        let m = '12';
+
+        //Conditions
+        console.log(n < 5);
+        console.log(n < 13);
+        console.log(n <= 12);
+        console.log(n <= 6);
+        console.log(n > 5);
+        console.log(n > 13);
+        console.log(n >= 12);
+        console.log(n >= 22);
+        console.log(n == m); // value condition 
+        console.log(n === m); // data type condition
+        console.log(n != m); 
+        console.log(n !== m);
+
+        //Logical Operator
+        // AND = &&
+        // OR = ||
+
+        console.log(12 < 13 && 15 > 11 && 10 > 5);
+        console.log(true && true && true );
+        console.log(12 < 13 && 15 > 11 && 10 > 15);
+        console.log(true && true && false); // if one thing is false, everthing is false in AND 
+
+        console.log(10 < 12 || 13 > 21 || 13 < 11);
+        console.log(true || false || false); // if one thing is true, everthing is true in OR 
+
+        // AND x
+        // OR +
+        // concept of AND
+        // 1 x 1 x 0 = 0
+        // concept of NO
+        // 1 + 0 + 0 = 1
+
+
 
     </script>
 </body>
