exam pass assignment second commit

--- a/JavaScript/exampass.html
+++ b/JavaScript/exampass.html
@@ -41,10 +41,10 @@
                 if(html >=80){
                     document.write(' <table border="3" cellspacing="0" cellpadding="15"><tr><td>Subject</td><td>Mark</td></tr><tr><td> HTML</td><td>'+html+'</td></tr></table>')
                 }if(css >=80){
-                    document.write('<h1>You have passed the exam with'+css+ ' mark in css</h1>')
+                    document.write('<table border="3" cellspacing="0" cellpadding="15"><tr><td>Subject</td><td>Mark</td></tr><tr><td> CSS</td><td>'+css+'</td></tr></table>')
                 }
                 if(js >=80){
-                    document.write('<h1>You have passed the exam with'+js+ ' mark in js</h1>')
+                    document.write('<table border="3" cellspacing="0" cellpadding="15"><tr><td>Subject</td><td>Mark</td></tr><tr><td> JS</td><td>'+js+'</td></tr></table>')
                 }
             }else{document.write('<h1>'+name+ ' you have passed!</h1>')
             }
@@ -58,7 +58,7 @@
                     document.write('<h1>You have failed in CSS with the mark of : '+css+'</h1>')
                 }
                 if(js <50){
-                    document.write('<h1>You have failed in HTML with the mark of : '+js+'</h1>')
+                    document.write('<h1>You have failed in JS with the mark of : '+js+'</h1>')
                 }
             }
         }
