exam assignment third commit

--- a/JavaScript/exampass.html
+++ b/JavaScript/exampass.html
@@ -39,12 +39,12 @@
                 if(html >=80 || css >=80 || js >= 80){
                 document.write('<h1>Dear '+ name + ' You have passed the exam with distinction</h1>' )
                 if(html >=80){
-                    document.write(' <table border="3" cellspacing="0" cellpadding="15"><tr><td>Subject</td><td>Mark</td></tr><tr><td> HTML</td><td>'+html+'</td></tr></table>')
+                    document.write(' <table border="3" cellspacing="0" cellpadding="15"><tr><td>Distinction Subject</td><td>Mark</td></tr><tr><td> HTML</td><td>'+html+'</td></tr></table>')
                 }if(css >=80){
-                    document.write('<table border="3" cellspacing="0" cellpadding="15"><tr><td>Subject</td><td>Mark</td></tr><tr><td> CSS</td><td>'+css+'</td></tr></table>')
+                    document.write('<table border="3" cellspacing="0" cellpadding="15"><tr><td>Distinction Subject</td><td>Mark</td></tr><tr><td> CSS</td><td>'+css+'</td></tr></table>')
                 }
                 if(js >=80){
-                    document.write('<table border="3" cellspacing="0" cellpadding="15"><tr><td>Subject</td><td>Mark</td></tr><tr><td> JS</td><td>'+js+'</td></tr></table>')
+                    document.write('<table border="3" cellspacing="0" cellpadding="15"><tr><td>Distinction Subject</td><td>Mark</td></tr><tr><td> JS</td><td>'+js+'</td></tr></table>')
                 }
             }else{document.write('<h1>'+name+ ' you have passed!</h1>')
             }
