--- a/JavaScript/exampass.html
+++ b/JavaScript/exampass.html
@@ -5,24 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        input[type='number']{
+            width:150px;
+            padding-left: 20px;
+        }
+
+label{
+    display: inline-block;
+
+
+}
+    </style>
 </head>
 <body>
-    <h1>Exam Pass</h1>
-    <form action="" name="myForm">
+    <h1 align="center">Exam Pass</h1>
+    <div clas="container">
+    <form action="" name="myForm" align="center">
         <label for="name">Name</label>
-        <input type="text" name="name" id="name">
+        <input class="name" type="text" name="name" id="name">
         <br><br>
         <label for="html">HTML</label>
-        <input type="number" name="html" id="html" min="0" max="100">
+        <input class="html" type="number" name="html" id="html" min="0" max="100">
         <br><br>
         <label for="css">CSS</label>
-        <input type="number" name="css" id="css" min="0" max="100">
+        <input class="css" type="number" name="css" id="css" min="0" max="100">
         <br><br>
-        <label for="js">JavaScript</label>
-        <input type="number" name="js" id="js" min="0" max="100">
+        <label class="js" for="js">JavaScript</label>
+        <input class="js" type="number" name="js" id="js" min="0" max="100">
         <br><br>
         <button type="button" onclick="result()">Result</button>
     </form> 
+</div>
     <script>
         function result(){
             // alert('Hello');
