--- a/JavaScript/exampass.html
+++ b/JavaScript/exampass.html
@@ -19,6 +19,7 @@ body {
     display: inline-block;
     padding: 40px 70px 70px 90px;
     background-color: gray;
+    color:white;
 }
 label{
     display: inline-block;
@@ -101,20 +102,20 @@ input {
             }
             else if(html >= 50 && css >= 50 && js >= 50){
                 if(html >=80 || css >=80 || js >= 80){
-                document.write(`<div class="container"><h1>Dear ${name}, You have passed the exam with distinction!</h1>` )
+                document.write(`<div class="container"><h1 style="color:white;">Dear ${name}, You have passed the exam with distinction!</h1>` )
                 if(html >=80){
-                    document.write(`<div class="htmltable"><table border="3" cellspacing="0" cellpadding="15"><tr><td>Distinction Subject</td><td>Mark</td></tr><tr><td> HTML</td><td> ${html} </td></tr></table><br></div>`)
+                    document.write(`<div class="htmltable"><table style="background-color:white;" border="2" cellspacing="0" cellpadding="12"><tr><td>Distinction Subject</td><td>Mark</td></tr><tr><td> HTML</td><td> ${html} </td></tr></table><br></div>`)
                 }if(css >=80){
-                    document.write(`<div class="csstable"><table border="3" cellspacing="0" cellpadding="15"><tr><td>Distinction Subject</td><td>Mark</td></tr><tr><td> CSS</td><td> ${css}</td></tr></table><br></div>`)
+                    document.write(`<div class="csstable"><table style="background-color:white;" border="2" cellspacing="0" cellpadding="12"><tr><td>Distinction Subject</td><td>Mark</td></tr><tr><td> CSS</td><td> ${css}</td></tr></table><br></div>`)
                 }
                 if(js >=80){
-                    document.write(`<div class="jstable"><table border="3" cellspacing="0" cellpadding="15"><tr><td>Distinction Subject</td><td>Mark</td></tr><tr><td> JS</td><td>${js}</td></tr></table><br></div>`)
+                    document.write(`<div class="jstable"><table style="background-color:white;" border="2" cellspacing="0" cellpadding="12"><tr><td>Distinction Subject</td><td>Mark</td></tr><tr><td> JS</td><td>${js}</td></tr></table><br></div>`)
                 }
             }else{document.write(`<div class="container"><h1> ${name}  you have passed!</h1></div>`)
             }
         }
             else{
-                document.write(`<div class="container"><h1> ${name} you have failed!</h1>`)
+                document.write(`<div class="container1"><h1> ${name} you have failed!</h1>`)
                 if(html <50){
                     document.write(`<h4>You have failed in HTML with the mark of : <span style="color:red;">${html}</h4>`)
                 }
@@ -132,16 +133,24 @@ input {
                 margin:250px 50px 150px 100px; padding:0px;
                 text-align:center;
                 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;   
+
             }
 
             .container{
                 border-radius: 10px;
                 display: inline-block;
                 padding: 40px 70px 70px 90px;
-                background-color: gray;
-                
+                background-color: gray; 
             }
-            
+
+            .container1{
+                border-radius: 10px;
+                display: inline-block;
+                padding: 40px 70px 70px 90px;
+                background-color: gray;
+                color:white;
+                font-weight:500;
+            }
             .htmltable{
             display:inline-flex;
             }
