--- a/JavaScript/exampass.html
+++ b/JavaScript/exampass.html
@@ -143,7 +143,7 @@ input {
                 background-color: gray; 
             }
 
-            .container1{
+            .container1{git
                 border-radius: 10px;
                 display: inline-block;
                 padding: 40px 70px 70px 90px;
