--- a/JavaScript/exampass.html
+++ b/JavaScript/exampass.html
@@ -70,16 +70,16 @@ input {
     
     <form action="" name="myForm" align="center">
         <label for="name">Name: </label>
-        <input type="text" name="name" id="name" value="Kevin">
+        <input type="text" name="name" id="name">
         <br><br>
         <label for="html">HTML: </label>
-        <input type="number" name="html" id="html" min="0" max="100" value="50">
+        <input type="number" name="html" id="html" min="0" max="100">
         <br><br>
         <label for="css">CSS: </label>
-        <input type="number" name="css" id="css" min="0" max="100" value="50">
+        <input type="number" name="css" id="css" min="0" max="100">
         <br><br>
         <label for="js">JavaScript: </label>
-        <input type="number" name="js" id="js" min="0" max="100" value="50">
+        <input type="number" name="js" id="js" min="0" max="100">
         <br><br>
         <button class="button button4" type="button" onclick="result()">Result</button>
     </form> 
