--- a/JavaScript/exampass.html
+++ b/JavaScript/exampass.html
@@ -97,32 +97,32 @@ input {
             let js = document.myForm.js.value;
             console.log(js);
 
-            if(html<0 || html>100 || css<0 ||css>100 || js<0 || js>100){
+            if(html<0 || html>100 || css<0 ||css>100 || js<0 || js>100){//Validation for Insertation of Numbers (It should be only between 0 and 100 otherwise it will be rejected)
                 alert('Please insert between 0 to 100.');
             }
             else if(html >= 50 && css >= 50 && js >= 50){
-                if(html >=80 || css >=80 || js >= 80){
+                if(html >=80 || css >=80 || js >= 80){//If the student pass with Distinction
                 document.write(`<div class="container"><h1 style="color:white;">Dear ${name}, You have passed the exam with distinction!</h1>` )
-                if(html >=80){
+                if(html >=80){//HTML Point
                     document.write(`<div class="htmltable"><table style="background-color:white;" border="2" cellspacing="0" cellpadding="12"><tr><td>Distinction Subject</td><td>Mark</td></tr><tr><td> HTML</td><td> ${html} </td></tr></table><br></div>`)
-                }if(css >=80){
+                }if(css >=80){//CSS point
                     document.write(`<div class="csstable"><table style="background-color:white;" border="2" cellspacing="0" cellpadding="12"><tr><td>Distinction Subject</td><td>Mark</td></tr><tr><td> CSS</td><td> ${css}</td></tr></table><br></div>`)
                 }
-                if(js >=80){
+                if(js >=80){//JS point
                     document.write(`<div class="jstable"><table style="background-color:white;" border="2" cellspacing="0" cellpadding="12"><tr><td>Distinction Subject</td><td>Mark</td></tr><tr><td> JS</td><td>${js}</td></tr></table><br></div>`)
                 }
-            }else{document.write(`<div class="container"><h1> ${name}  you have passed!</h1></div>`)
+            }else{document.write(`<div class="container"><h1> ${name}  you have passed!</h1></div>`)//If the student only pass
             }
         }
             else{
-                document.write(`<div class="container1"><h1> ${name} you have failed!</h1>`)
-                if(html <50){
+                document.write(`<div class="container1"><h1> ${name} you have failed!</h1>`)//If the student fails
+                if(html <50){//HTML point
                     document.write(`<h4>You have failed in HTML with the mark of : <span style="color:red;">${html}</h4>`)
                 }
-                if(css <50){
+                if(css <50){//CSS point
                     document.write(`<h4>You have failed in CSS with the mark of : <span style="color:red;">${css}</h4>`)
                 }
-                if(js <50){
+                if(js <50){//JS point
                     document.write(`<h4>You have failed in JS with the mark of : <span style="color:red;">${js}</h4></div>`)
                 }
             }
@@ -143,8 +143,8 @@ input {
                 background-color: gray; 
             }
 
-            .container1{git
-                border-radius: 10px;
+            .container1{
+                border-radius: 10px;    
                 display: inline-block;
                 padding: 40px 70px 70px 90px;
                 background-color: gray;
