--- a/JavaScript/js7.html
+++ b/JavaScript/js7.html
@@ -22,9 +22,45 @@
         let number = prompt('Please insert a number to start multiplication program');
         console.log(number);
         for(let n = 1; n<=12; n++){
-
          document.write(`<h3>${number} x ${n} = ${number*n}</h3>`)
         }
+
+        // *****
+        // *****
+        // *****
+        // *****
+        // ***** 
+        // for (let m = 0; m <5; m++){
+        //     for(let k = 0; k < 5; k++){
+        //         document.write('*');
+        //     }
+        //     document.write('<br>');
+        // }
+
+        // // *
+        // // **
+        // // ***
+        // // ****
+        // // *****
+        // for(let g=0; g<5; g++){
+        //     for(let h=0; h<=g;h++){
+        //         document.write('*');
+        //     }
+        //     document.write('<br>');
+        // }
+
+        // *****
+        // ****
+        // ***
+        // **
+        // *
+        for(let o=0; o<5; o++){
+            for(let y=4; y>=o;y--){
+                document.write('*');
+            }
+            document.write('<br>');
+        }
+
     </script>
 </body>
 </html>
