--- a/JavaScript/starloop.html
+++ b/JavaScript/starloop.html
@@ -14,7 +14,7 @@
     // **
     // *
         for(let o=0; o<5; o++){
-            for(let y=4; y>=o;y--){
+            for(let y=5; y>o;y--){
                 document.write('*');
             }
             document.write('<br>');
