--- a/JavaScript/js7.html
+++ b/JavaScript/js7.html
@@ -61,6 +61,19 @@
             document.write('<br>');
         }
 
+        //While Loop
+        let num = 1;
+        while(num < 10){
+            document.write(`<h3>This num is ${num}</h3>`);
+            num++;
+        }
+
+        let no = 1;
+        do{
+            document.write(`<h3>This no is ${no}</h3>`)
+            no++;
+        }while(no < 0)
+
     </script>
 </body>
 </html>
