--- a/CSS/selector.html
+++ b/CSS/selector.html
@@ -12,5 +12,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti numquam recusandae, blanditiis repellat nisi dolor nesciunt temporibus voluptatibus? Fuga, laborum amet veritatis aliquam repellat aut architecto impedit, natus dolore quo, dolores asperiores dolor? Molestiae doloremque, delectus dolorem quaerat velit odit, quibusdam repellat cumque, quo quos corrupti soluta. Facere, sed quibusdam?</p>
     <div>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti, laudantium dolorum error corporis a quis. Minima, ex aut. Impedit in doloremque enim doloribus nam repudiandae, corrupti, qui obcaecati, quis numquam vero magnam nobis deleniti culpa dolore necessitatibus. Earum commodi, hic perferendis ut molestias laudantium tenetur esse! Unde eveniet dignissimos autem! </div>
     <small>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia nemo velit nihil maiores distinctio culpa fugiat, delectus doloremque. Dolorem deserunt explicabo voluptas ullam minus non, alias eum dignissimos maxime suscipit praesentium quidem consequatur, facilis porro quam impedit nulla distinctio vitae dicta quas quo, officiis excepturi provident reiciendis. Voluptatem, laudantium repellendus?</small>
+    <a href="" title="Google">Google</a>
+    <a href="">Facebook</a>
 </body>
-</html>
+</html> 
