--- a/CSS/register.html
+++ b/CSS/register.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="register.css">
     <title>Student Registration Form</title>
 </head>
-<body>
+<body class="body">
     <h1>Student Register</h1>
-    <form action="">
+    <form action="" class="form">
         <label for="name">Name:</label>
         <input type="text" placeholder="Mg Mg" id="name">
         <br><br>
@@ -35,7 +36,7 @@
             <label for="highschool">High school (10th grade)</label>
         </div>
         <div>          
-            <input type="checkbox" id="higherschool">
+            <input type="checkbox" id="higherschool" disabled>
             <label for="higherschool">Higher school (12th grade)</label>
         </div>
         <div>          
@@ -66,7 +67,7 @@
         </fieldset>
 
         <p></p>
-        <p>Thank you</p>
+        <p class="thank_you">Thank you</p>
         <p></p>
     </form>
 </body>
