--- a/CSS/border.html
+++ b/CSS/border.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Border Lesson</h1>
+    <h1>Border Lessons</h1>
     <p class="borderone">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam quo temporibus voluptate aliquam cum sed impedit aliquid porro sit sint nostrum totam iure voluptatibus mollitia nesciunt, sapiente non nobis qui et vel eum dicta quis! Obcaecati sint vero adipisci quidem.</p>
     <br><br>
     <p class="bordertwo">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam quo temporibus voluptate aliquam cum sed impedit aliquid porro sit sint nostrum totam iure voluptatibus mollitia nesciunt, sapiente non nobis qui et vel eum dicta quis! Obcaecati sint vero adipisci quidem.</p>
