--- a/Floral/index.html
+++ b/Floral/index.html
@@ -18,11 +18,11 @@
             <p class="brand_name">Kyaw Floral</p>
         </div>
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Shop</a></li>
-                <li><a href="">Blog</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="shop.html">Shop</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li><a href=""><i class="fa-solid fa-cart-plus fa-xl"></i></a><span class="cart_noti">5</span></li>
             </ul>
     </nav>
@@ -139,16 +139,60 @@
         <h1>How To Make Packaging</h2>
             <img src="images/portfolio.jpg" alt="">
    
-    <div class="packaging_text">
-        <h1><i class="fa-solid fa-circle-arrow-right fa-xs"></i>Planning</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores nihil voluptatem quidem inventore sapiente, sint perferendis. Fuga, nihil atque! Facere non ullam praesentium, temporibus, beatae eos nemo expedita numquam aut sint incidunt natus, perspiciatis repellat possimus quod iusto quas mollitia officia quos deserunt quia! Praesentium recusandae fugit ducimus cumque debitis.</p>
-        <h1 class="packaging_header"><i class="fa-solid fa-circle-arrow-right fa-xs"></i>Creating</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit quasi commodi quas, eaque totam earum nesciunt ea praesentium aliquam. Excepturi modi illo natus nulla distinctio, architecto asperiores</p>
-        <h1 class="packaging_header"><i class="fa-solid fa-circle-arrow-right fa-xs"></i>Packaging</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod perferendis repellendus eveniet, vitae nihil fuga sequi consectetur officia culpa provident. Repellendus perferendis enim delectus impedit tempora sapiente necessitatibus, nobis minus doloremque consequatur eos esse dolore amet dolorem sequi ipsum nulla voluptate quisquam ipsa, itaque totam, dignissimos consectetur officiis nemo! Sit!</p>
+        <div class="packaging_text">
+            <h1><i class="fa-solid fa-circle-arrow-right fa-xs"></i>Planning</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores nihil voluptatem quidem inventore sapiente, sint perferendis. Fuga, nihil atque! Facere non ullam praesentium, temporibus, beatae eos nemo expedita numquam aut sint incidunt natus, perspiciatis repellat possimus quod iusto quas mollitia officia quos deserunt quia! Praesentium recusandae fugit ducimus cumque debitis.</p>
+            <h1 class="packaging_header"><i class="fa-solid fa-circle-arrow-right fa-xs"></i>Creating</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit quasi commodi quas, eaque totam earum nesciunt ea praesentium aliquam. Excepturi modi illo natus nulla distinctio, architecto asperiores</p>
+            <h1 class="packaging_header"><i class="fa-solid fa-circle-arrow-right fa-xs"></i>Packaging</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod perferendis repellendus eveniet, vitae nihil fuga sequi consectetur officia culpa provident. Repellendus perferendis enim delectus impedit tempora sapiente necessitatibus, nobis minus doloremque consequatur eos esse dolore amet dolorem sequi ipsum nulla voluptate quisquam ipsa, itaque totam, dignissimos consectetur officiis nemo! Sit!</p>
 
+        </div>
     </div>
+    <!-- End Packaging -->
+    <div class="clear"></div>
+    <!-- Start Service -->
+    <div class="service">
+        <div class="service_icon">
+            <i class="fa-solid fa-truck-fast fa-3x"></i>
+            <p>
+                <span>Free Shipping</span> <br>For order from $50
+            </p>
+        </div>
+        <div class="service_icon">
+            <i class="fa-solid fa-headset fa-3x"></i>
+            <p>
+                <span>Support 24/7</span> <br>Call Us Anytime
+            </p>
+        </div>
+        <div class="service_icon">
+            <i class="fa-solid fa-shield-halved fa-3x"></i>
+            <p>
+                <span>100% Safety</span> <br>Only Secure Payment
+            </p>
+        </div>
+        <div class="service_icon">
+            <i class="fa-solid fa-tags fa-3x"></i>
+            <p>
+                <span>Hot Offers</span> <br>Discount up to 90%
+            </p>
+        </div>
+    </div>
+    <!-- End Service -->
 
-</div>
+    <!-- Start Footer -->
+    <footer class="footer">
+        <center class="center">
+            <a href="index.html" class="footer_nav">Home</a>
+            <a href="shop.html" class="footer_nav">Shop</a>
+            <a href="blog.html" class="footer_nav">Blog</a>
+            <a href="about.html" class="footer_nav">About</a>
+            <a href="contact.html" class="footer_nav">Contact</a>
+            <p>Designed by &Kappa;ebrone Institute @ 2022 <br>&copy; All right reservered.</p>
+            <a href="" class="footer_icon"><i class="fa-brands fa-square-facebook fa-2x"></i></a>
+            <a href="" class="footer_icon"><i class="fa-brands fa-facebook-messenger fa-2x"></i></a>
+            <a href="" class="footer_icon"><i class="fa-brands fa-viber fa-2x"></i></a>
+        </center>
+    </footer>
 </body>
 </html>
