about us page commit

--- a/Floral/about.html
+++ b/Floral/about.html
@@ -23,11 +23,76 @@
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href=""><i class="fa-solid fa-cart-plus fa-xl"></i></a><span class="cart_noti">5</span></li>
+                <li><a href="about"><i class="fa-solid fa-cart-plus fa-xl"></i></a><span class="cart_noti">5</span></li>
             </ul>
     </nav>
     <!-- End nav -->
-    <h1>This is About Page</h1>
+
+    <!-- Start of About section -->
+    <div class="aboutus">
+        <img src="images/aboutus.jpg" alt="">
+        <div class="aboutusbanner">
+            <h1>ABOUT US</h1>
+            <a href="#about"><button class="aboutusbutton">EXPLORE</button></a>
+        </div>
+    </div>
+
+    <div class="quoteaboutus">
+        <h2>"What we offer is top-notch quality that will never dissapoint our customers upon the arrival of the product. Handled delicately and decorated with astonishing designs"</h2>
+    </div>
+
+    <div class="mission" id="about">
+            <div class="mission_text">
+                <h1>Our Mission</h1>
+                <br>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore quas quibusdam placeat, at quidem eum alias odio, sed, beatae temporibus officia odit tempore enim laboriosam omnis distinctio ducimus blanditiis ipsum iure nesciunt dolores explicabo! Vel dolorum provident praesentium quia ex doloribus dignissimos quae, quo maiores magni voluptates molestiae aspernatur et.</p>
+                <br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe magnam suscipit exercitationem doloribus minima quos reiciendis repellendus iste numquam nulla autem excepturi fugiat incidunt, maxime, facilis quas culpa ab corrupti, quis pariatur blanditiis corporis maiores beatae! Nulla optio labore cumque non dignissimos ea, quibusdam odit, dolor, deserunt voluptatum error inventore.</p>
+            </div>
+            <div>
+                <img src="images/team.jpg" alt="" class="missionimg">
+            </div>
+    </div>
+
+    <div class="teamheading">
+        <h1>MEET OUR TEAM</h1>
+        <hr>
+    </div>
+
+    <div class="team">
+        <div class="teammember">
+            <img src="images/teammember1.png" alt="">
+            <div></div>
+            <h2>Kevin Chang</h2>
+            <p class="teammember_title">CEO</p>
+            <p class="teammember_desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente vitae ex aspernatur facilis asperiores corporis pariatur facere harum alias quae.</p>
+            <a href="" class="team_icon"><i class="fa-brands fa-facebook fa-2x"></i></a>
+            <a href="" class="team_icon"><i class="fa-brands fa-instagram fa-2x"></i></a>
+            <a href="" class="team_icon"><i class="fa-brands fa-linkedin fa-2x"></i></a>
+        </div>
+        <div class="teammember">
+            <img src="images/teammember2.jpg" alt="">
+            <div></div>
+            <h2>Steven Lim</h2>
+            <p class="teammember_title">Product Executive</p>
+            <p class="teammember_desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente vitae ex aspernatur facilis asperiores corporis pariatur facere harum alias quae.</p>
+            <a href="" class="team_icon"><i class="fa-brands fa-facebook fa-2x"></i></a>
+            <a href="" class="team_icon"><i class="fa-brands fa-instagram fa-2x"></i></a>
+            <a href="" class="team_icon"><i class="fa-brands fa-linkedin fa-2x"></i></a>
+        </div>
+        <div class="teammember">
+            <img src="images/teammember3.jpg" alt="">
+            <div></div>
+            <h2>Denise Lous</h2>
+            <p class="teammember_title">Designer</p>
+            <p class="teammember_desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente vitae ex aspernatur facilis asperiores corporis pariatur facere harum alias quae.</p>
+            <a href="" class="team_icon"><i class="fa-brands fa-facebook fa-2x"></i></a>
+            <a href="" class="team_icon"><i class="fa-brands fa-instagram fa-2x"></i></a>
+            <a href="" class="team_icon"><i class="fa-brands fa-linkedin fa-2x"></i></a>
+        </div>
+    </div>
+    <!-- End of About section -->
+    <div class="clear"></div>
     <!-- Start Service -->
     <div class="service">
         <div class="service_icon">
