contact us form first version

--- a/Floral/contact.html
+++ b/Floral/contact.html
@@ -27,7 +27,67 @@
             </ul>
     </nav>
     <!-- End nav -->
-    <h1>This is Contact Page</h1>
+
+    <!-- Start of Contact Us -->
+    <div class="contactus_heading">
+        <h1>Contact Us</h1>
+        <hr>
+    </div>
+
+    <!-- Socials -->
+    <div class="contactus_socials">
+        <div class="contactus_box"> 
+            <div class="contactus_frontcard">
+                <i class="fa-solid fa-envelope fa-bounce fa-3x"></i>
+            </div>
+            <div class="contactus_backcard">
+                <h1>Email:</h1>
+                <p>winkhantpaing32@gmail.com</p>
+            </div>
+        </div>
+        <div class="contactus_box">
+            <div class="contactus_frontcard">
+                <i class="fa-solid fa-phone fa-bounce fa-3x"></i>
+            </div>
+            <div class="contactus_backcard">
+                <h1>Phone Number:</h1>
+                <p>+959799120315</p>
+            </div>
+        </div>
+        <div class="contactus_box">
+            <div class="contactus_frontcard">
+                <i class="fa-solid fa-link fa-bounce fa-3x"></i>
+            </div>
+            <div class="contactus_backcard">
+                <h1>Our Website:</h1>
+                Send us form through this <a href="">link</a>
+            </div>
+        </div>
+    </div>
+    <br><br>
+    <!-- Contact Us form -->
+    <div class="contactus_form">
+        <div>
+            <h1>Contact Us Form</h1>
+            <p>Send messages through this form!</p>
+        </div>
+        <div>
+            <form action="" class="form">
+                <input type="text" placeholder="   Name">
+                <br><br>
+                <input type="email" placeholder="   Email">
+                <br><br>
+                <input type="number" placeholder="   Phone number">
+                <br><br>
+                <label for="Message">Message:</label><br><br>
+                <textarea name="message" id="Message" cols="80" rows="10"></textarea>
+                <br><br>
+                <button>Submit</button>
+                <br><br>
+        
+            </form>
+        </div>
+    </div>
     <!-- Start Service -->
     <div class="service">
         <div class="service_icon">
