contact us final version commit

--- a/Floral/contact.html
+++ b/Floral/contact.html
@@ -60,16 +60,17 @@
             </div>
             <div class="contactus_backcard">
                 <h1>Our Website:</h1>
-                Send us form through this <a href="">link</a>
+                Send us form through this <a href="contact.html">link</a>
             </div>
         </div>
     </div>
     <br><br>
     <!-- Contact Us form -->
-    <div class="contactus_form">
+    <div class="contactus_form" id="contactus_form">
         <div>
-            <h1>Contact Us Form</h1>
-            <p>Send messages through this form!</p>
+            <h1>Contact Us</h1>
+            
+            <p>Send us Inquiries through this form!</p>
         </div>
         <div>
             <form action="" class="form">
@@ -82,10 +83,25 @@
                 <label for="Message">Message:</label><br><br>
                 <textarea name="message" id="Message" cols="80" rows="10"></textarea>
                 <br><br>
-                <button>Submit</button>
+                <button class="contact_submit">Submit</button>
                 <br><br>
         
             </form>
+        </div>
+    </div>
+
+    <!-- Location -->
+    <div class="location">
+        <div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3819.391439316833!2d96.17597255009292!3d16.806926188372135!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30c1ed00d1e5ca21%3A0x14f8463bb4a8778d!2sFloral!5e0!3m2!1sen!2smm!4v1665394162639!5m2!1sen!2smm" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class="location_text">
+            <h1>Pay a visit to our Office</h1>
+            <div class="location_desc">
+                <i class="fa-solid fa-house fa-3x"></i><br><br>
+                <p>Zatila Street, Yangon,</p>
+                <p>Tamwe Township</p>
+            </div>
         </div>
     </div>
     <!-- Start Service -->
