blog first version update

--- a/Floral/blog.html
+++ b/Floral/blog.html
@@ -27,7 +27,33 @@
             </ul>
     </nav>
     <!-- End nav -->
-    <h1>This is Blog Page</h1>
+    
+    <!-- Start of the blog -->
+    <div class="blog_heading">
+        <h1>Blog</h1>
+        <hr>
+    </div>
+
+    <div class="blog">
+        <div class="megablog">
+            <br><Br><br>
+        <img src="images/conference.jpg" alt="" width="400">
+        <div class="megablog_text">
+            <h3>First Coference in Public</h3>
+            <h6>Our CEO address a special announcement</h6>
+        </div>
+        </div>
+        <div class="normalblog">
+            <img src="images/teammember1.png" alt="" width="170">
+            <h3>First Coference in Public</h3>
+            <h6>Our CEO address a special announcement</h6>
+        </div>
+        <div class="normalblog">
+            <img src="images/teammember1.png" alt="" width="170">
+            <h3>First Coference in Public</h3>
+            <h6>Our CEO address a special announcement</h6>
+        </div>
+    </div>
     <!-- Start Service -->
     <div class="service">
         <div class="service_icon">
