--- a/Floral/contact.html
+++ b/Floral/contact.html
@@ -83,7 +83,7 @@
                 <label for="Message">Message:</label><br><br>
                 <textarea name="message" id="Message" cols="80" rows="10"></textarea>
                 <br><br>
-                <button class="contact_submit">Submit</button>
+                <button type="button" class="contact_submit">Submit</button>
                 <br><br>
         
             </form>
@@ -104,6 +104,8 @@
             </div>
         </div>
     </div>
+    <!-- End of contact us  -->
+    
     <!-- Start Service -->
     <div class="service">
         <div class="service_icon">
