blog second version

--- a/Floral/blog.html
+++ b/Floral/blog.html
@@ -40,18 +40,21 @@
         <img src="images/conference.jpg" alt="" width="400">
         <div class="megablog_text">
             <h3>First Coference in Public</h3>
-            <h6>Our CEO address a special announcement</h6>
+            <h5>Our CEO commence a special announcement</h5>
+            <a href=""><button class="blog_button">Check More</button></a>
         </div>
         </div>
         <div class="normalblog">
-            <img src="images/teammember1.png" alt="" width="170">
-            <h3>First Coference in Public</h3>
-            <h6>Our CEO address a special announcement</h6>
+            <img src="images/blogimg1.jpg" alt="" width="240">
+            <h3>Science about Flowers</h3>
+            <h5>Did you know flowers can neurologically <br>influence a state of being on human?</h5>
+            <a href=""><button class="blog_button">Check More</button></a>
         </div>
         <div class="normalblog">
-            <img src="images/teammember1.png" alt="" width="170">
-            <h3>First Coference in Public</h3>
-            <h6>Our CEO address a special announcement</h6>
+            <img src="images/blogimg2.jpg" alt="" width="240">
+            <h3>Get a job with Floral Decoration</h3>
+            <h5>Hiring rate has been rapidly increasing!<br> It is absolutely unprecedented.</h5>
+            <a href=""><button class="blog_button">Check More</button></a>
         </div>
     </div>
     <!-- Start Service -->
