blog final version commit

--- a/Floral/blog.html
+++ b/Floral/blog.html
@@ -57,6 +57,37 @@
             <a href=""><button class="blog_button">Check More</button></a>
         </div>
     </div>
+    <div class="divide">
+        <hr>
+    </div>
+    <div class="video_blog">
+        <div class="youtube_tag">
+            <h1>Our Youtube Channel</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis quasi sed repudiandae explicabo? Quam iure id cumque error numquam placeat voluptas nulla delectus excepturi sapiente, aut iste officia iusto optio ducimus reiciendis est consectetur illum voluptate. Error rerum nobis harum repellendus recusandae in. At fugit aliquam veniam autem atque soluta.</p>
+            <a href=""><button class="videoblog_button">Visit Our Channel</button></a>
+        </div>
+        <div class="youtube_video">
+            <iframe width="500" height="315" src="https://www.youtube.com/embed/j_W8JcXGAZI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="border-radius: 10px; box-shadow:3px 3px 6px black"></iframe>
+        </div>
+        <div class="youtube_video">
+            <iframe width="500" height="315" src="https://www.youtube.com/embed/_wTCCNWuXz0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="border-radius: 10px; box-shadow:3px 3px 6px black"></iframe>
+        </div>
+    </div>
+
+    <div class="divide">
+        <hr>
+    </div>
+
+    <div class="newevents">
+        <div class="grandopening">
+            <h5>Grand Opening</h5>
+            <h2>Coming Soon!</h2>
+        </div>
+        <div class="class">
+            <h5>Floral Classes</h5>
+            <h2>Coming Soon!</h2>
+        </div>
+    </div>
     <!-- Start Service -->
     <div class="service">
         <div class="service_icon">
