Floral Project final version commit

--- a/Floral/shop.html
+++ b/Floral/shop.html
@@ -27,7 +27,202 @@
             </ul>
     </nav>
     <!-- End nav -->
-    <h1>This is Shop Page</h1>
+    <h1 class="product_header">Latest Products</h1>
+    <hr class="divider">
+
+    <div class="products">
+        <div>
+            <img src="images/flower1.jpg" alt="" class="product_img">
+            <p>IRISES</p>
+            <p>
+                10000 MMK <span class="discount">15000 MMK</span>
+            </p>
+            <button class="add_to_cart">Add to Cart</button>
+        </div>
+        <div>
+            <img src="images/flower2.jpg" alt="" class="product_img" >
+            <p>IRISES</p>
+            <p>
+                10000 MMK
+            </p>
+            <button class="add_to_cart">Add to Cart</button>
+        </div>
+        <div>
+            <img src="images/flower3.jpg" alt="" class="product_img" >
+            <p>IRISES</p>
+            <p>
+                10000 MMK
+            </p>
+            <button class="add_to_cart">Add to Cart</button>
+        </div>
+        <div>
+            <img src="images/flower4.jpg" alt="" class="product_img" >
+            <p>IRISES</p>
+            <p>
+                10000 MMK<span class="discount">15000 MMK</span>
+            </p>
+            <button class="add_to_cart">Add to Cart</button>
+        </div>
+        <div>
+            <img src="images/flower5.jpg" alt="" class="product_img" >
+            <p>IRISES</p>
+            <p>
+                10000 MMK
+            </p>
+            <button class="add_to_cart">Add to Cart</button>
+        </div>
+        <div>
+            <img src="images/flower6.jpg" alt="" class="product_img">
+            <p>IRISES</p>
+            <p>
+                10000 MMK
+            </p>
+            <button class="add_to_cart">Add to Cart</button>
+        </div>
+        <div>
+            <img src="images/flower7.jpg" alt="" class="product_img">
+            <p>IRISES</p>
+            <p>
+                10000 MMK <span class="discount">15000 MMK</span>
+            </p>
+            <button class="add_to_cart">Add to Cart</button>
+        </div>
+        <div>
+            <img src="images/flower8.jpg" alt="" class="product_img" >
+            <p>IRISES</p>
+            <p>
+                10000 MMK
+            </p>
+            <button class="add_to_cart">Add to Cart</button>
+        </div>
+    </div>
+    <!-- End Product -->
+
+    <h1 class="product_header">Hot Offer</h1>
+    <hr class="divider">
+
+    <div class="hotoffer_products">
+        <div>
+            <img src="images/flower1.jpg" alt="" class="product_img">
+            <p>IRISES</p>
+            <p>
+                10000 MMK <span class="discount">15000 MMK</span>
+            </p>
+            <button class="add_to_cart">Add to Cart</button>
+        </div>
+        <div>
+            <img src="images/flower2.jpg" alt="" class="product_img" >
+            <p>IRISES</p>
+            <p>
+                10000 MMK <span class="discount">15000 MMK</span>
+            </p>
+            <button class="add_to_cart">Add to Cart</button>
+        </div>
+        <div>
+            <img src="images/flower3.jpg" alt="" class="product_img" >
+            <p>IRISES</p>
+            <p>
+                10000 MMK <span class="discount">15000 MMK</span>
+            </p>
+            <button class="add_to_cart">Add to Cart</button>
+        </div>
+        <div>
+            <img src="images/flower4.jpg" alt="" class="product_img" >
+            <p>IRISES</p>
+            <p>
+                10000 MMK <span class="discount">15000 MMK</span>
+            </p>
+            <button class="add_to_cart">Add to Cart</button>
+        </div>
+        <div>
+            <img src="images/flower5.jpg" alt="" class="product_img" >
+            <p>IRISES</p>
+            <p>
+                10000 MMK <span class="discount">15000 MMK</span>
+            </p>
+            <button class="add_to_cart">Add to Cart</button>
+        </div>
+        <div>
+            <img src="images/flower6.jpg" alt="" class="product_img">
+            <p>IRISES</p>
+            <p>
+                10000 MMK <span class="discount">15000 MMK</span>
+            </p>
+            <button class="add_to_cart">Add to Cart</button>
+        </div>
+    </div>
+    <!-- End Product -->
+
+    <h1 class="product_header">New Promotion</h1>
+    <hr class="divider">
+
+    <div class="products">
+        <div>
+            <img src="images/flower1.jpg" alt="" class="product_img">
+            <p>IRISES</p>
+            <p>
+                10000 MMK <span class="buy2get1">Buy 2 Get 1 FREE!</span>
+            </p>
+            <button class="add_to_cart">Add to Cart</button>
+        </div>
+        <div>
+            <img src="images/flower2.jpg" alt="" class="product_img" >
+            <p>IRISES</p>
+            <p>
+                10000 MMK <span class="buy2get1">Buy 2 Get 1 FREE!</span>
+            </p>
+            <button class="add_to_cart">Add to Cart</button>
+        </div>
+        <div>
+            <img src="images/flower3.jpg" alt="" class="product_img" >
+            <p>IRISES</p>
+            <p>
+                10000 MMK <span class="buy2get1">Buy 2 Get 1 FREE!</span>
+            </p>
+            <button class="add_to_cart">Add to Cart</button>
+        </div>
+        <div>
+            <img src="images/flower4.jpg" alt="" class="product_img" >
+            <p>IRISES</p>
+            <p>
+                10000 MMK <span class="buy2get1">Buy 2 Get 1 FREE!</span>
+            </p>
+            <button class="add_to_cart">Add to Cart</button>
+        </div>
+        <div>
+            <img src="images/flower5.jpg" alt="" class="product_img" >
+            <p>IRISES</p>
+            <p>
+                10000 MMK <span class="buy2get1">Buy 2 Get 1 FREE!</span>
+            </p>
+            <button class="add_to_cart">Add to Cart</button>
+        </div>
+        <div>
+            <img src="images/flower6.jpg" alt="" class="product_img">
+            <p>IRISES</p>
+            <p>
+                10000 MMK <span class="buy2get1">Buy 2 Get 1 FREE!</span>
+            </p>
+            <button class="add_to_cart">Add to Cart</button>
+        </div>
+        <div>
+            <img src="images/flower7.jpg" alt="" class="product_img">
+            <p>IRISES</p>
+            <p>
+                10000 MMK <span class="buy2get1">Buy 2 Get 1 FREE!</span>
+            </p>
+            <button class="add_to_cart">Add to Cart</button>
+        </div>
+        <div>
+            <img src="images/flower8.jpg" alt="" class="product_img" >
+            <p>IRISES</p>
+            <p>
+                10000 MMK <span class="buy2get1">Buy 2 Get 1 FREE!</span>
+            </p>
+            <button class="add_to_cart">Add to Cart</button>
+        </div>
+    </div>
+
     <!-- Start Service -->
     <div class="service">
         <div class="service_icon">
