blog second minor update commit

--- a/Floral/blog.html
+++ b/Floral/blog.html
@@ -81,11 +81,11 @@
     <div class="newevents">
         <div class="grandopening">
             <h5>Grand Opening</h5>
-            <h2>Coming Soon!</h2>
+            <h2>Coming Soon</h2>
         </div>
         <div class="class">
             <h5>Floral Classes</h5>
-            <h2>Coming Soon!</h2>
+            <h2>Coming Soon</h2>
         </div>
     </div>
     <!-- Start Service -->
